--- a/.github/workflows/github-actions-submodule-sync.yml
+++ b/.github/workflows/github-actions-submodule-sync.yml
@@ -13,7 +13,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: meenavl/submodule-projecta
-  Public
           token: ${{ secrets.PRIVATE_TOKEN_GITHUB }}
 
       - name: Pull & update submodules recursively
@@ -22,7 +21,7 @@ jobs:
           git submodule update --recursive --remote
       - name: Commit
         run: |
-          git config user.email "actions@github.com"
+          git config user.email "palani.meena1@gmail.com"
           git config user.name "GitHub Actions - update submodules"
           git add --all
           git commit -m "Update submodules" || echo "No changes to commit"
