--- a/.github/workflows/github-actions-submodule-sync.yml
+++ b/.github/workflows/github-actions-submodule-sync.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: meenavl/submodule-projecta
-          token: ${{ secrets.PRIVATE_TOKEN_GITHUB }}
+          token: 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
 
       - name: Pull & update submodules recursively
         run: |
