--- a/.github/workflows/github-actions-submodule-sync.yml
+++ b/.github/workflows/github-actions-submodule-sync.yml
@@ -13,7 +13,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: meenavl/submodule-projecta
-          token: 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
+          env:
+            GITHUB_TOKEN: ${{ secrets.PAT }}
 
       - name: Pull & update submodules recursively
         run: |
