--- a/.github/workflows/github-actions-submodule-sync.yml
+++ b/.github/workflows/github-actions-submodule-sync.yml
@@ -25,8 +25,11 @@ jobs:
           git submodule update --recursive --remote
       - name: Commit
         run: |
-          git config user.email "palani.meena1@gmail.com"
+          git config user.email "m.palaniappan1@whitbread.com"
           git config user.name "GitHub Actions - update submodules"
           git add --all
           git commit -m "Update submodules" || echo "No changes to commit"
-          git push
+          git push https://$USERNAME:$REPO_KEY@github.com/meenavl/submodule-projecta.git
+                env:
+                  REPO_KEY: ${{secrets.PAT}}
+                  USERNAME: github-actions[bot]
