--- a/.github/workflows/github-actions-submodule-sync.yml
+++ b/.github/workflows/github-actions-submodule-sync.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: meenavl/submodule-projecta
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.REPO_KEY }}
 
       - name: Pull & update submodules recursively
         run: |
