--- a/.github/workflows/github-actions-submodule-sync.yml
+++ b/.github/workflows/github-actions-submodule-sync.yml
@@ -29,7 +29,7 @@ jobs:
           git config user.name "GitHub Actions - update submodules"
           git add --all
           git commit -m "Update submodules" || echo "No changes to commit"
-          git push https://$USERNAME:${{ secrets.REPO_KEY }}@github.com/meenavl/submodule-projecta.git
+          git push https://$USERNAME:$REPO_KEY@github.com/meenavl/submodule-projecta.git
                 env:
                   REPO_KEY: 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
                   USERNAME: meenavl
