--- a/.github/workflows/github-actions-submodule-sync.yml
+++ b/.github/workflows/github-actions-submodule-sync.yml
@@ -15,9 +15,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-        with:
-          repository: meenavl/submodule-projecta
-          token: $REPO_KEY
 
       - name: Pull & update submodules recursively
         run: |
@@ -29,7 +26,4 @@ jobs:
           git config user.name "GitHub Actions - update submodules"
           git add --all
           git commit -m "Update submodules" || echo "No changes to commit"
-          git push https://$USERNAME:$REPO_KEY@github.com/meenavl/submodule-projecta.git
-                env:
-                  REPO_KEY: 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
-                  USERNAME: meenavl
+          git push
