--- a/.github/workflows/github-actions-submodule-sync.yml
+++ b/.github/workflows/github-actions-submodule-sync.yml
@@ -15,6 +15,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          token: ${{secrets.PAT}}
+          submodules: true
 
       - name: Pull & update submodules recursively
         run: |
