--- a/.github/workflows/github-actions-submodule-sync.yml
+++ b/.github/workflows/github-actions-submodule-sync.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          token: ${{secrets.PAT}}
+          token: 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
           submodules: true
 
       - name: Pull & update submodules recursively
