--- a/.github/workflows/github-actions-submodule-sync.yml
+++ b/.github/workflows/github-actions-submodule-sync.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: meenavl/submodule-projecta
-          token: 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
+          token: {{ secrets.GITHUB_TOKEN }}
 
       - name: Pull & update submodules recursively
         run: |
