--- a/.github/workflows/github-actions-submodule-sync.yml
+++ b/.github/workflows/github-actions-submodule-sync.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: meenavl/submodule-projecta
-          token: {{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Pull & update submodules recursively
         run: |
@@ -25,7 +25,7 @@ jobs:
           git submodule update --recursive --remote
       - name: Commit
         run: |
-          git config user.email "m.palaniappan1@whitbread.com"
+          git config user.email "palani.meena1@gmail.com"
           git config user.name "GitHub Actions - update submodules"
           git add --all
           git commit -m "Update submodules" || echo "No changes to commit"
