--- a/.github/workflows/github-actions-submodule-sync.yml
+++ b/.github/workflows/github-actions-submodule-sync.yml
@@ -16,9 +16,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
-         fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
-
+          repository: meenavl/submodule-projecta
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Pull & update submodules recursively
         run: |
@@ -26,7 +25,7 @@ jobs:
           git submodule update --recursive --remote
       - name: Commit
         run: |
-          git config user.email "palani.meena1@gmail.com"
+          git config user.email "action@github.com"
           git config user.name "GitHub Actions - update submodules"
           git add --all
           git commit -m "Update submodules" || echo "No changes to commit"
