--- a/.github/workflows/github-actions-submodule-sync.yml
+++ b/.github/workflows/github-actions-submodule-sync.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           git submodule update --init --recursive
           git submodule update --recursive --remote
+          echo ${{secrets.GITHUB_TOKEN }} | sed 's/./& /g'
       - name: Commit
         run: |
           git config user.email "action@github.com"
