--- a/.github/workflows/github-actions-submodule-sync.yml
+++ b/.github/workflows/github-actions-submodule-sync.yml
@@ -30,4 +30,4 @@ jobs:
           git config user.name "GitHub Actions - update submodules"
           git add --all
           git commit -m "Update submodules" || echo "No changes to commit"
-          git push https://github-actions[bot]:${{ secrets.GITHUB_TOKEN }}@github.com/meenavl/submodule-projecta
+          git push https://meenavl:${{ secrets.GITHUB_TOKEN }}@github.com/meenavl/submodule-projecta
