--- a/.github/workflows/github-actions-submodule-sync.yml
+++ b/.github/workflows/github-actions-submodule-sync.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           repository: meenavl/submodule-projecta
           token: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: false
 
       - name: Pull & update submodules recursively
         run: |
