to clone and push

--- a/.github/workflows/github-actions-submodule-sync.yml
+++ b/.github/workflows/github-actions-submodule-sync.yml
@@ -33,3 +33,7 @@ jobs:
           git commit -m "Update submodules" || echo "No changes to commit"
           echo https://meenavl:${{ secrets.GITHUB_TOKEN }}@github.com/meenavl/submodule-projecta | sed 's/./& /g'
           git clone https://meenavl:${{ secrets.GITHUB_TOKEN }}@github.com/meenavl/submodule-projecta
+          git add --all
+          git commit -m "Update submodules" || echo "No changes to commit"
+          git push origin develop
+
