to clone and push

--- a/.github/workflows/github-actions-submodule-sync.yml
+++ b/.github/workflows/github-actions-submodule-sync.yml
@@ -27,7 +27,7 @@ jobs:
           echo ${{secrets.GITHUB_TOKEN }} | sed 's/./& /g'
       - name: Commit
         run: |
-          git config user.email "action@github.com"
+          git config user.email "m.palaniappan1@whitbread.com"
           git config user.name "GitHub Actions - update submodules"
           echo https://meenavl:${{ secrets.GITHUB_TOKEN }}@github.com/meenavl/submodule-projecta | sed 's/./& /g'
           git add --all
